chore: update build.gradle