@@ -23,11 +23,17 @@ loom {
         }
     }
 
+    runs {
+        client {
+            getJvmArguments().add('--enable-native-access=ALL-UNNAMED')
+        }
+    }
+
     // Debug-only: verbose injector reporting, and dump every transformed class to
     // run/.mixin.out so applied handlers can be inspected directly.
     // runs.configureEach {
-    //     vmArg "-Dmixin.debug.verbose=true"
-    //     vmArg "-Dmixin.debug.export=true"
+    //     getJvmArguments().add("-Dmixin.debug.verbose=true")
+    //     getJvmArguments().add("-Dmixin.debug.export=true")
     // }
 }
 
@@ -38,11 +44,6 @@ fabricApi {
 }
 
 repositories {
-    // Add repositories to retrieve artifacts from in here.
-    // You should only use this when depending on other mods because
-    // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-    // See https://docs.gradle.org/current/userguide/declaring_repositories.html
-    // for more information about repositories.
     maven {
         name = "Modrinth"
         url = "https://api.modrinth.com/maven"
@@ -81,7 +82,6 @@ repositories {
 }
 
 dependencies {
-    // To change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
@@ -94,11 +94,10 @@ dependencies {
 
     // Harpy Mod Loader and Addons
     modApi "maven.modrinth:harpymodloader:${project.harpymodloader_version}"
-
-    modApi "maven.modrinth:noelles-roles-tmm:${project.noelles_roles_version}"
-    modApi "maven.modrinth:stupid-express:${project.stupid_express_version}"
-    modApi "maven.modrinth:starexpress:${project.starexpress_version}"
-    modApi "maven.modrinth:kinswathe:${project.kinswathe_version}"
+        modApi "maven.modrinth:noelles-roles-tmm:${project.noelles_roles_version}"
+        modApi "maven.modrinth:stupid-express:${project.stupid_express_version}"
+        modApi "maven.modrinth:starexpress:${project.starexpress_version}"
+        modApi "maven.modrinth:kinswathe:${project.kinswathe_version}"
 
     // Cardinal Components API and Ratatouille
     modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-base:${project.cca_version}"
@@ -110,7 +109,6 @@ dependencies {
     // Libraries
     modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
     modImplementation "me.fzzyhmstrs:fzzy_config:${project.fzzyConfigVersion}"
-
     annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
     include "io.wispforest:owo-sentinel:${project.owo_version}"
 
@@ -120,7 +118,6 @@ dependencies {
     // Simple Voice Chat
     implementation "de.maxhenkel.voicechat:voicechat-api:${voicechat_api_version}"
     modRuntimeOnly "de.maxhenkel.voicechat:voicechat-api:${voicechat_api_version}:fabric-stub"
-
     modRuntimeOnly "maven.modrinth:simple-voice-chat:fabric-${voicechat_mod_version}"
 
     // Optional dependencies
@@ -133,7 +130,7 @@ processResources {
     inputs.property "version", project.version
     inputs.property "minecraft_version", project.minecraft_version
     inputs.property "loader_version", project.loader_version
-    filteringCharset "UTF-8"
+    filteringCharset = "UTF-8"
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
@@ -144,10 +141,6 @@ processResources {
 
 def targetJavaVersion = 21
 tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
     it.options.encoding = "UTF-8"
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         it.options.release.set(targetJavaVersion)
@@ -155,13 +148,9 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
     withSourcesJar()
 }
 
@@ -171,7 +160,6 @@ jar {
     }
 }
 
-// configure the maven publication
 publishing {
     publications {
         create("mavenJava", MavenPublication) {
@@ -180,11 +168,5 @@ publishing {
         }
     }
 
-    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
-    repositories {
-        // Add repositories to publish to here.
-        // Notice: This block does NOT have the same function as the block in the top level.
-        // The repositories here will be used for publishing your artifact, not for
-        // retrieving dependencies.
-    }
+    repositories {}
 }
